Fix landscape info too narrow

--- a/static/styles.css
+++ b/static/styles.css
@@ -354,6 +354,8 @@ h6 {
     }
 
     #section-track-info {
+        padding-left: 1rem;
+        width: 25rem;
         grid-row: 1;
         grid-column: 2;
         overflow-y: auto;
